--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,7 +28,7 @@
 
             <h1 class="section_title">Welcome to LessonFly community.</h1>
             <p class="normal_text">
-                  Your extraordinary one on one fun tutoring experience start here! To be able to Learning Gaining Teaching.<br>You can create your own classes or attend someone else's trainings using our  platform to directly connect with the person from whenever you want!<br>Discover <span class="bold"><b>LESSONFLY</b></span> and start now your fun & enjoyable tutoring experience.
+                  Your extraordinary one on one fun tutoring experience start here! To be able to Learning Gaining Teaching.<br>You can create your own classes or attend someone else's trainings using our  platform to directly connect with the person from whenever you want!<br>Discover <span class="bold"><b>LESSONFLY</b></span> and start now your fun & enjoyable tutoring experience..
             </p>
 
       </div>
