--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,16 +1,23 @@
 // Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
+@import url("https://fonts.googleapis.com/css?family=Abel|Fjalla+One");
 
 // Define fonts for body and headers
-$body-font: "Open Sans", "Helvetica", "sans-serif";
-$headers-font: "Raleway", "Helvetica", "sans-serif";
+@font-face {
+  font-family: 'Fjalla One', sans-serif;
 
-// To use a font file (.woff) uncomment following lines
-// @font-face {
-//   font-family: "Font Name";
-//   src: font-url('FontFile.eot');
-//   src: font-url('FontFile.eot?#iefix') format('embedded-opentype'),
-//        font-url('FontFile.woff') format('woff'),
-//        font-url('FontFile.ttf') format('truetype')
-// }
-// $my-font: "Font Name";
+  src: font-url('FontFile.eot');
+  src: font-url('FontFile.eot?#iefix') format('embedded-opentype'),
+       font-url('FontFile.woff') format('woff'),
+       font-url('FontFile.ttf') format('truetype')
+}
+$my-font: 'Fjalla One', ;
+
+
+@font-face {
+  font-family: 'Abel', sans-serif;
+  src: font-url('FontFile.eot');
+  src: font-url('FontFile.eot?#iefix') format('embedded-opentype'),
+       font-url('FontFile.woff') format('woff'),
+       font-url('FontFile.ttf') format('truetype')
+}
+$my-font-2: 'Abel';
