--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,7 +19,7 @@
         <%= text_field_tag :query,
           params["#{:query}?size=5"],
           class: "form-control search",
-          placeholder: "Search"
+          placeholder: "Search your teacher by Subject"
         %>
 
       <% end %>
