--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -25,6 +25,12 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
+.profile-photo{
+  height: 175px;
+  border-radius: 10%;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
+
 .avatar-nav{
   width:45px;
   height:45px;
