--- a/app/assets/stylesheets/components/_become_teacher.scss
+++ b/app/assets/stylesheets/components/_become_teacher.scss
@@ -1,6 +1,6 @@
 .become-teacher-container {
   display: block;
-  margin-top: 80px;
+  margin-top: 100px;
 }
 
 .form-become-teacher {
@@ -12,8 +12,9 @@
   border: #767676 solid 1px;
   border-radius: 10px;
   box-shadow: 0 0 25px rgba(0,0,0,0.4);
+  color: white;
   h1 {
-    color: #585A63;
+    color: #A8234B;
     font-size: 30px;
     padding-bottom: 20px;
     border-bottom: #767676 solid 1px;
