--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -3,12 +3,11 @@
   grid-template-columns: 1fr 1fr 1fr;
   flex-grow: 1;
   grid-gap: 16px;
-  margin-top: 16px;
   margin-left: 8px;
   margin-right: 8px;
   margin-bottom: 16px;
   width: 70%;
-  padding: 8px;
+  padding: 0 8px 8px 8px;
 }
 
 .cards {
