--- a/app/assets/stylesheets/components/_sign-in&up-form.scss
+++ b/app/assets/stylesheets/components/_sign-in&up-form.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   text-align: left;
-  // margin-top: 80px;
+  height: 600px;
 }
 
 .form-signin {
@@ -14,15 +14,17 @@
   border: #767676 solid 1px;
   border-radius: 10px;
   box-shadow: 0 0 25px rgba(0,0,0,0.4);
+  position: relative;
+  top: 50px;
   h1 {
-    color: #585A63;
+    color: white;
     font-size: 30px;
     padding-bottom: 20px;
     border-bottom: #767676 solid 1px;
     margin-bottom: 20px;
   }
   h2 {
-    color: #585A63;
+    color: white;
     font-size: 20px;
     padding-bottom: 20px;
     border-bottom: #767676 solid 1px;
