--- a/app/assets/stylesheets/pages/_bookings_new.scss
+++ b/app/assets/stylesheets/pages/_bookings_new.scss
@@ -8,6 +8,7 @@
   width: 500px;
   h1 {
     padding-bottom: 10px;
+    color: white;
   }
 }
 
@@ -35,7 +36,7 @@
   border-bottom: #afaeae solid 1px;
   h2 {
     font-weight: normal;
-    color: #c4c2c2;
+    color: #A8234B;
   }
 }
 
