--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -1,8 +1,8 @@
 .container-show {
   display: flex;
   flex-direction: column;
-  margin-top: 70px;
-  padding: 20px 0;
+  margin-top: 200px;
+  margin-bottom: 100px;
 }
 .card-details {
   display: flex;
@@ -11,7 +11,7 @@
 .teacher-details {
   display: flex;
   flex-grow: 1;
-  background-color: white;
+  background-color: transparent;
   border-radius: 8px;
   margin-right: 10px;
   flex-direction: column;
@@ -19,6 +19,7 @@
 }
 .teacher-details:hover{
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  background-color: #424242;
 }
 .price-story {
   display: flex;
@@ -46,6 +47,7 @@
   flex-direction: column;
   text-align: center;
   justify-content: center;
+  color: white;
   h3 {
     font-size: 40px;
     text-align: center;
@@ -66,6 +68,7 @@
   flex-direction: column;
   padding: 0 30px;
   justify-content: center;
+  color: white;
   h1 {
     font-size: 32px;
     letter-spacing: 2px;
