changed font and color

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,7 +5,7 @@
 
 .navbar-lewagon {
   // justify-content: space-between;
-  background-color: black;
+  background-color: #33313b;
   transition: 0.5s background-color ease;
   position: fixed;
   top:0;
