--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -82,7 +82,7 @@
 .name-skills {
   padding-top: 10px;
 }
-div.map-user.mapboxgl-map {
+.map-user {
   border-radius: 8px;
   height: 460px !important;
   width: 30%;
