--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -4,18 +4,15 @@
 // 3. You can override them below!
 
 // General style
-$font-family-sans-serif:  'Abel';
-$headings-font-family:    'Fjalla One';
-$body-bg:                 black;
+$font-family-sans-serif:  $body-font;
+$headings-font-family:    $headers-font;
+$body-bg:                 #33313b;
 $font-size-base: 1rem;
 
 // Colors
-$gray-base:       $gray;
-$brand-primary:   $blue;
-$brand-success:   $green;
-$brand-info:      $yellow;
-$brand-danger:    $red;
-$brand-warning:   $orange;
+$brand-secondary:  #F3326B;
+$brand-primary:   #B2E8EE;
+
 
 // Buttons & inputs' radius
 $border-radius-base:  2px;
