--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,11 +21,12 @@
         </div>
       </div>
     </div>
-    <div class="map-user"
-      id="map"
-      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-      data-markers="<%= @markers.to_json %>"
-      ></div>
+      <div class="map-user"
+        id="map"
+        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+        data-markers="<%= @markers.to_json %>"
+        >
+        </div>
     </div>
   <div class="buttons-users-show">
     <%= link_to "Back to teacher search", users_path, class: "btn btn-all-teachers btn-user" %>
